--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
+  <style>
+    /*
+           .hamlet{
+            background-color: yellow;
+           }
+    */
+  </style>
  </head>
  <body>
      <header>
@@ -19,7 +26,9 @@
      </header>
      
    <main class="wrapper">
-    <p>Content goes here</p>
+    <p><span onclick="this.style.backgroundColor='yellow'">Hamlet: To be or not to be?</span></p>
+    <p>Skull: Are you talking to me?</p>
+    <P class="hamlet">Hamlet: What did you Say?</P>
      <footer>
       <p><small>&copy; 2021 by 
           YOUR NAME HERE, All Rights Reserved ~ 
@@ -29,5 +38,6 @@
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script src="js/dom-play.js"></script>
  </body>
 </html>
