--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             background-color: yellow;
            }
     */
+
+#play span{
+  background-color: yellow;
+
+}
+
+
   </style>
  </head>
  <body>
@@ -26,9 +33,11 @@
      </header>
      
    <main class="wrapper">
-    <p><span onclick="this.style.backgroundColor='yellow'">Hamlet: To be or not to be?</span></p>
-    <p>Skull: Are you talking to me?</p>
-    <P class="hamlet">Hamlet: What did you Say?</P>
+    <div id="play">
+    <p><span data-actor="hamlet">Hamlet: To be or not to be?</span></p>
+    <p><span data-actor="Skull">Skull: Are you talking to me? </span></p>
+    <P><span data-actor="hamlet">Hamlet: What did you Say?</span></P>
+    </div>
      <footer>
       <p><small>&copy; 2021 by 
           YOUR NAME HERE, All Rights Reserved ~ 
