--- a/index.html
+++ b/index.html
@@ -1,133 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-     <title>Hamlet Act</title>
-  <meta charset="utf-8" />
-  <meta name="robots" content="noindex,nofollow" />
-  <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/nav.css" />
-  <style>
-    /*
-    .hamlet{
-        background-color: yellow;
-    }
-    */
 
-    /*
-    #play span{
-      background-color:blue;
-    }
-    */
+<head>
+    <title>Dom Play</title>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/nav.css" />
 
-  </style>
- </head>
- <body>
-     <header>
-     <h1>Hamlet Act III Snippet</h1>
+</head>
+
+<body>
+    <header>
+        <h1>DOM Play</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
-     </header>
-     
-   <main class="wrapper">
-      <div id="play">
-        <p>This Project was made with HTML,CSS, and Javascript. In this project you are able to click on certain actor names and all their dialogue in this small scene will be highlighted. </p>>
-          <p><strong>(Start)</strong></p>
-          <p><span data-actor="laertes">Laertes: My necessaries are embark'd: farewell: And, sister, as the winds give benefit and convoy is assistant, do not sleep, but let me hear from you.</span></p>
-          <p><span data-actor="ophelia">Ophelia: Do you doubt that?</span></p>
-          <p><span data-actor="laertes">Laertes: For Hamlet and the trifling of his favour, hold it a fashion and a toy in blood, a violet in the youth of primy nature, forward, not permanent, sweet, not lasting, the perfume and suppliance of a minute; No more.</span></p>
-          <p><span data-actor="ophelia">Ophelia: No more but so?</span></p>
-          <p><span data-actor="laertes">Laertes: Think it no more;
-            For nature, crescent, does not grow alone
-            In thews and bulk, but, as this temple waxes,
-            The inward service of the mind and soul
-            Grows wide withal. Perhaps he loves you now,
-            And now no soil nor cautel doth besmirch
-            The virtue of his will: but you must fear,
-            His greatness weigh'd, his will is not his own;
-            For he himself is subject to his birth:
-            He may not, as unvalued persons do,
-            Carve for himself; for on his choice depends
-            The safety and health of this whole state;
-            And therefore must his choice be circumscribed
-            Unto the voice and yielding of that body
-            Whereof he is the head. Then if he says he loves you,
-            It fits your wisdom so far to believe it
-            As he in his particular act and place
-            May give his saying deed; which is no further
-            Than the main voice of Denmark goes withal.
-            Then weigh what loss your honour may sustain,
-            If with too credent ear you list his songs,
-            Or lose your heart, or your chaste treasure open
-            To his unmaster'd importunity.
-            Fear it, Ophelia, fear it, my dear sister,
-            And keep you in the rear of your affection,
-            Out of the shot and danger of desire.
-            The chariest maid is prodigal enough,
-            If she unmask her beauty to the moon:
-            Virtue itself 'scapes not calumnious strokes:
-            The canker galls the infants of the spring,
-            Too oft before their buttons be disclosed,
-            And in the morn and liquid dew of youth
-            Contagious blastments are most imminent.
-            Be wary then; best safety lies in fear:
-            Youth to itself rebels, though none else near.</span></p>
-          <p><span data-actor="ophelia">Ophelia: I shall the effect of this good lesson keep,
-            As watchman to my heart. But, good my brother,
-            Do not, as some ungracious pastors do,
-            Show me the steep and thorny way to heaven;
-            Whiles, like a puff'd and reckless libertine,
-            Himself the primrose path of dalliance treads,
-            And recks not his own rede.</span></p>
-          <p><span data-actor="laertes">Laertes: O, fear me not.
-            I stay too long: but here my father comes.</span></p>
-          <p><span data-actor="polonius">Lord Polonius: Yet here, Laertes! aboard, aboard, for shame!
-            The wind sits in the shoulder of your sail,
-            And you are stay'd for. There; my blessing with thee!
-            And these few precepts in thy memory
-            See thou character. Give thy thoughts no tongue,
-            Nor any unproportioned thought his act.
-            Be thou familiar, but by no means vulgar.
-            Those friends thou hast, and their adoption tried,
-            Grapple them to thy soul with hoops of steel;
-            But do not dull thy palm with entertainment
-            Of each new-hatch'd, unfledged comrade. Beware
-            Of entrance to a quarrel, but being in,
-            Bear't that the opposed may beware of thee.
-            Give every man thy ear, but few thy voice;
-            Take each man's censure, but reserve thy judgment.
-            Costly thy habit as thy purse can buy,
-            But not express'd in fancy; rich, not gaudy;
-            For the apparel oft proclaims the man,
-            And they in France of the best rank and station
-            Are of a most select and generous chief in that.
-            Neither a borrower nor a lender be;
-            For loan oft loses both itself and friend,
-            And borrowing dulls the edge of husbandry.
-            This above all: to thine ownself be true,
-            And it must follow, as the night the day,
-            Thou canst not then be false to any man.
-            Farewell: my blessing season this in thee!</span></p>
-          <p><span data-actor="laertes">Laertes: Most humbly do I take my leave, my lord.</span></p>
-          <p><span data-actor="polonius">Lord Polonius: The time invites you; go; your servants tend.</span></p>
-          <p><span data-actor="laertes">Laertes: Farewell, Ophelia; and remember well
-            What I have said to you.</span></p>
-          <p><span data-actor="ophelia">Ophelia: 'Tis in my memory lock'd,
-            And you yourself shall keep the key of it.</span></p>
-          <p><span data-actor="laertes">Laertes: Farewell.</span></p>
-          <p><strong>(End)</strong></p>
-      </div>
-     <footer>
-      <p><small>&copy; 2021 by 
-          Abel Melese, All Rights Reserved ~ 
-          <a id="html-checker" href="#">Check HTML</a> ~ 
-          <a id="css-checker" href="#">Check CSS</a></small>
-     </p>
-    </footer>
-  </main>
-  <script src="js/main.js"></script>
-  <script src="js/dom-play.js"></script>
- </body>
+    </header>
+
+    <main class="wrapper">
+        <h2>Page Description:</h2>
+        <p>This website allows you to highlight the actors that are speaking to make it easier for you to read out lines
+            without
+            getting confused at all.</p>
+        <h2>Here is the script, The royal chamber. Hamlet is pacing back and forth, while King Claudius and Queen
+            Gertrude observe :</h2>
+        <div id="play">
+            <p> <span data-actor="hamlet">Hamlet:(frustrated) "I can't believe it! Someone has taken my favorite
+                    hat!"</span> </p>
+            <p> <span data-actor="King Claudius">King Claudius: (amused) "Oh, Hamlet, it's just a hat. I'm sure you'll
+                    find it."</span> </p>
+            <p> <span data-actor="Queen Gertrude"> Queen Gertrude: (sympathetically) "Don't worry, dear. Maybe it's just
+                    misplaced. We'll help you look for it."</span> </p>
+            <p> <span data-actor="hamlet">Hamlet: (grinning) "Look! I found it! Oh, wait... that's your crown,
+                    Uncle."</span> </p>
+            <p> <span data-actor="king Claudius">King Claudius: (laughing) "Oh, Hamlet, you never fail to surprise me.
+                    That's indeed the royal crown."</span> </p>
+            <p> <span data-actor="Queen Gertrude">Queen Gertrude: (teasingly) "Hamlet, I think you might need some
+                    glasses. That crown is a bit too big for a hat."?</span> </p>
+            <p> <span data-actor="hamlet">Hamlet: (sheepishly) "Well, it does look quite majestic on me, don't you
+                    think?"</span> </p>
+            <p> <span data-actor="King Claudius"> King Claudius: (playfully) "Yes, my dear prince, but I believe we
+                    should keep the crown where it belongs, on my head."</span> </p>
+            <p> <span data-actor="Queen Gertrude">Queen Gertrude: (smiling) "Come now, Hamlet, let's continue searching
+                    for your missing hat. It must be here somewhere."</span> </p>
+            <p> <span data-actor="hamlet">Hamlet: (excitedly) "I found it! Here it is! My beloved hat!"</span> </p>
+            <p> <span data-actor="King Claudius">King Claudius: (relieved) "Ah, there you go, Hamlet. See? It was right
+                    under your nose."</span> </p>
+            <p> <span data-actor="Queen Gertrude">Queen Gertrude: (teasingly) "Or on top of your head, to be more
+                    precise."</span> </p>
+            <p> <span data-actor="hamlet">Hamlet: (grinning) "Thank you both for your help. I can't imagine ruling with
+                    a crown on my head and a hat on my mind!"</span> </p>
+        </div>
+
+        <footer>
+            <p><small>&copy; 2023 by
+                    Mahad Ali, All Rights Reserved ~
+                    <a id="html-checker" href="#">Check HTML</a> ~
+                    <a id="css-checker" href="#">Check CSS</a></small>
+            </p>
+        </footer>
+    </main>
+    <script src="js/main.js"></script>
+    <script src="js/dom-play.js"></script>
+</body>
+
 </html>
