--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <footer>
             <p><small>&copy; 2023 by
-                    Mahad Ali, All Rights Reserved ~
+                    Abel Melese, All Rights Reserved ~
                     <a id="html-checker" href="#">Check HTML</a> ~
                     <a id="css-checker" href="#">Check CSS</a></small>
             </p>
